--- a/style.css
+++ b/style.css
@@ -7,6 +7,39 @@
   animation: pulse 5s infinite;
   padding: 2px;
 }
+body{
+  background-color: #f2f2f2;
+  padding: 1rem;
+}
+
+h1{
+  font-size: 48px;
+}
+
+input{
+  background-color: #f2f2f2;
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+button{
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
 @-webkit-keyframes pulse {
   0% {
